@@ -102,6 +102,9 @@ class DatabasePostgres extends Database {
 	function implicitGroupby() {
 		return false;
 	}
+	function implicitOrderby() {
+		return false;
+	}
 	function searchableIPs() {
 		return true;
 	}
